--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
 
         body {
-            color: #15113d;
+            color: #cccbd8;
             background: #000;
             line-height: 1.6;
             scroll-behavior: smooth;
